[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handler = { path = "./handler"}
io = { path = "./io" }
bootloader = "0.9.23"


[workspace]
members=["handler","io"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
